--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     hello
-    <a href="/video/get?id=999">点击</a>
+    <a href="/video/json?id=2">点击</a>
+    <form action="/video/json" method="post">
+        <p>First name: <input type="text" name="id" /></p>
+        <input type="submit" value="Submit" />
+    </form>
 </body>
 </html>
